Corrects vertical alignment for navigation search bar

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -58,6 +58,7 @@ header {
 
   nav {
     float: right;
+    margin-top: -4px;
 
     ul li {
       display: inline-block;
